# rag_practice

./: .env  .gitignore  README.md  main.py  pyproject.toml  rag.py
